# infrahub-demo-vip-and-lb

./: .gitignore  .infrahub.yml  README.md  ansible-requirements.yml  ansible.cfg  inventory.yml  pyproject.toml  tasks.py
cache/: frontend4.development.th3.par.fr.ct.ninja
checks/: lb_and_vip_env.gql  validate_lb_and_vip.py
models/base/: 1-organizations.yml  2-location.yml  3-ipam.yml
models/extensions/: extension_platforms.yml  extension_routing.yml  extension_server.yml
playbooks/: pb-retrieve-haproxy-artifact.yml  pb-retrieve-nginx-artifact.yml
scripts/: init_data.py
transforms/: bird.conf.j2  frontend_vip.gql  haproxy.conf.j2  lb_asn.gql  lb_vip.gql  nginx.conf.j2
