[tool.poetry]
name = "infrahub-demo-vip-and-lb"
version = "0.1.0"
description = ""
authors = ["OpsMill <info@opsmill.com>"]

[tool.poetry.dependencies]
python = "^3.9, < 3.13"
infrahub-sdk = {version = "^1", extras = ["all"]}
invoke = "2.2.0"
nornir-infrahub = "^1"
ansible-core = [
    { version = ">=2.15.9", python = ">=3.9,<3.10" },
    { version = ">=2.17.4", python = ">=3.10" },
]
netaddr = "^0.9.0"
paramiko = "^3.3.1"
deepmerge = "^1.1.0"
cvprac = "^1.3.1"
md-toc = "^8.2.2"
treelib = "^1.7.0"
jsonschema = "4.17"
# anta = "^0.11.0"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
ruff = "^0.7.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
